--- a/app/src/main/res/layout/activity_inserir_nova_reserva.xml
+++ b/app/src/main/res/layout/activity_inserir_nova_reserva.xml
@@ -17,8 +17,7 @@
     <EditText
         android:id="@+id/activity_inserir_nova_reserva_email_cliente"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="email_cliente"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/activity_inserir_nova_reserva_titulo_Produtor"
@@ -33,8 +32,7 @@
     <EditText
         android:id="@+id/activity_inserir_nova_reserva_email_produtor"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="email_produtor"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/activity_inserir_nova_reserva_titulo_feira"
@@ -49,8 +47,7 @@
     <EditText
         android:id="@+id/activity_inserir_nova_reserva_id_feira"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="id_feira"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/activity_inserir_nova_reserva_titulo_lista_produtos"
@@ -62,8 +59,7 @@
     <EditText
         android:id="@+id/activity_inserir_nova_reserva_lista_produtos"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="lista_produtors"/>
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/activity_inserir_nova_reserva_botao_salvar_reserva"
